<resources>
    <string name="app_name">EV-Dictionary</string>
    <!--home-->
    <string name="home_ev_dictionary">EV - Dictionary</string>
    <string name="home_hint_search">Type something here</string>
    <string name="home_vietnamese_english_dictionary">Vietnamese English Dictionary</string>
    <string name="home_translate_text">Translate text</string>
    <string name="home_important_words">Important words</string>
    <string name="home_your_words">Your words</string>
    <string name="home_recent_words">Recent words</string>
    <string name="home_settings">Settings</string>
    <string name="home_text_promt">Please say the word or phrase to look up.</string>
    <string name="home_dialog_essential_words">Essential words</string>
    <string name="home_dialog_irregular_verbs">Irregular verbs</string>
    <string name="home_dialog_toeic_words">TOEIC words</string>
    <string name="home_dialog_ielts_words">IELTS words</string>
    <string name="home_dialog_toefl_words">TOEFL Words</string>
    <!--splash-->
    <string name="splash_text_please_wait">We are doing first setup. Please waiting for some minutes &#8230;</string>
    <string name="splash_text_vietnamese">Vietnamese</string>
    <string name="splash_text_english">English</string>
    <string name="splash_percent_zero">0 %</string>
    <!--fragment_common_search-->
    <string name="common_hint_search">Search</string>
    <string name="common_text_actionbar_title">Common ActionBar Title</string>
    <string name="action_search">menu_action_search</string>
    <!--ve_search-->
    <string name="ve_search_msg_no_word">Sorry. Having no word for searching</string>
    <!--ev_search-->
    <string name="ev_search_notify_error">Something went wrong. Try it later</string>
    <string name="ev_search_notify_fail">Failure. Try it later</string>
    <string name="ev_search_notify_success">Success</string>
</resources>
