<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <FrameLayout
        android:id="@+id/frameBackground"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@android:color/darker_gray"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textTitle"
        style="@android:style/TextAppearance.Large"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:paddingTop="@dimen/dp_16"
        android:paddingBottom="@dimen/dp_16"
        android:paddingLeft="@dimen/dp_32"
        android:paddingRight="@dimen/dp_32"
        android:text="@string/home_important_words"
        android:textColor="@color/color_blue_800"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textEssential"
        style="@style/HomeDialogTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/home_dialog_essential_words"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textTitle" />

    <TextView
        android:id="@+id/textIrregular"
        style="@style/HomeDialogTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/home_dialog_irregular_verbs"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textEssential" />

    <TextView
        android:id="@+id/textToeic"
        style="@style/HomeDialogTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/home_dialog_toeic_words"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textIrregular" />

    <TextView
        android:id="@+id/textIelts"
        style="@style/HomeDialogTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/home_dialog_ielts_words"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textToeic" />

    <TextView
        android:id="@+id/textToefl"
        style="@style/HomeDialogTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/home_dialog_toefl_words"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textIelts" />
</androidx.constraintlayout.widget.ConstraintLayout>
