<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.sun.ev_dictionary.ui.splash.SplashViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_blue_800">

        <ImageView
            android:id="@+id/imageLogo"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@drawable/ic_logo"
            app:layout_constraintDimensionRatio="w,1:1"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="@+id/guideline1"
            app:layout_constraintTop_toTopOf="@+id/guideline3"
            tools:ignore="ContentDescription" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="@style/SplashHorizontalProgressBar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_32"
            android:max="@{viewModel.numberOfEnglishWords}"
            android:progress="@{viewModel.numberOfEnglishWordsInserted}"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="@+id/guideline1"
            app:layout_constraintTop_toBottomOf="@+id/imageLogo" />

        <ProgressBar
            android:id="@+id/progressBar2"
            style="@style/SplashHorizontalProgressBar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:max="@{viewModel.numberOfVietnameseWords}"
            android:progress="@{viewModel.numberOfVietnameseWordsInserted}"
            app:layout_constraintEnd_toStartOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="@+id/guideline1"
            app:layout_constraintTop_toBottomOf="@+id/progressBar" />

        <TextView
            android:id="@+id/textEnglishPercent"
            style="@style/SplashTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/splash_percent_zero"
            app:bindingMaxValue="@{viewModel.numberOfEnglishWords}"
            app:bindingProgressValue="@{viewModel.numberOfEnglishWordsInserted}"
            app:layout_constraintBottom_toBottomOf="@+id/progressBar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/progressBar"
            app:layout_constraintTop_toTopOf="@+id/progressBar" />

        <TextView
            android:id="@+id/textVietnamesePercent"
            style="@style/SplashTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/splash_percent_zero"
            app:bindingMaxValue="@{viewModel.numberOfVietnameseWords}"
            app:bindingProgressValue="@{viewModel.numberOfVietnameseWordsInserted}"
            app:layout_constraintBottom_toBottomOf="@+id/progressBar2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toEndOf="@+id/progressBar2"
            app:layout_constraintTop_toTopOf="@+id/progressBar2" />

        <TextView
            android:id="@+id/textEnglish"
            style="@style/SplashTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/splash_text_english"
            app:layout_constraintBottom_toBottomOf="@+id/progressBar"
            app:layout_constraintEnd_toStartOf="@+id/progressBar"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/progressBar" />

        <TextView
            android:id="@+id/textVietnamese"
            style="@style/SplashTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/splash_text_vietnamese"
            app:layout_constraintBottom_toBottomOf="@+id/progressBar2"
            app:layout_constraintEnd_toStartOf="@+id/progressBar2"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/progressBar2" />

        <TextView
            android:id="@+id/textNotify"
            style="@style/SplashTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/splash_text_please_wait"
            app:layout_constraintBottom_toTopOf="@+id/guideline4"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/progressBar2"
            app:layout_constraintVertical_bias="1.0" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.3" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.7" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.2" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.9" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
